# test-app

./: README.md  main.py  pyproject.toml  requirements.txt  schemas.py
exam/: algs.json  exam_pis_variant_1.json  exam_pis_variant_4.json  python.json
